--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
   <title>FIUSAC PRACTICAS GRUPO 16</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="./main.css" rel="stylesheet">
+  <link href="./static/css/main.css" rel="stylesheet">
 </head>
 <body>
   <div class="nav-bar-top">
-    <img src="./logotipo-usac-invertido.png" width="300" height="100">
+    <img src="./static/media/logotipo-usac-invertido.png" width="300" height="100">
   </div>
   <div id="main">
     <div class="col">
@@ -17,6 +17,6 @@
     </div>
     <div class="col" id="window"></div>
   </div>
-  <script src="./main.js"></script>
+  <script src="./static/js/main.js"></script>
 </body>
 </html>
