--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="./static/media/logotipo-usac-invertido.png" width="240" height="80">
     <div>
       <ul>
-        <li><button id="home" href="/">Home<span></span></button></li>
+        <li><button id="home">Home<span></span></button></li>
         <li><button id="about">Acerca de</button></li>
         <li><button id="actividades">Actividades</button></li>
         <li><button id="foro">Foro</button></li>
