--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
           <button class="go-post" value="1">Visitar post</button>
         </div>
       </div>
+      <div class="blog-post">
+        <div class="blog-header">
+          <div>
+              <label>2</label>
+              <a>Practica 2: Instalación y conexión de distribuciones Windows y Linux</a>
+          </div>
+          <img src="./static/media/practica2-foto.jpeg">
+        </div>
+        <div class="blog-body">
+          <p>INFORME 2: Plantear soluciones para instalar Linux, sin necesidad de eliminar por completo, el sistema operativo
+            Windows y que el estudiante investigue las diferentes conexiones que existen en internet.
+          </p>
+          <button class="go-post" value="2">Visitar post</button>
+        </div>
+      </div>
     </div>
   </div>
   <div id="sub-main"></div>
