--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
       <div class="blog-post">
         <div class="blog-header">
           <div>
+              <label>3</label>
+              <a>Practica 3: Acceso remoto, compartir impresoras y carpetas en distintos SOs.</a>
+          </div>
+          <img src="./static/media/practica3-foto.jpeg">
+        </div>
+        <div class="blog-body">
+          <p>INFORME 3: Compartir carpetas, impresoras y archivos entre máquinas con distinto sistema operativo
+            que se encuentran en una misma red.
+            Los pasos a seguir y el desarrollo de la actividad se encontrarán al dar click en ver post.
+          </p>
+          <button class="go-post" value="3">Visitar post</button>
+        </div>
+      </div>
+      <div class="blog-post">
+        <div class="blog-header">
+          <div>
               <label>2</label>
               <a>Practica 2: Instalación y conexión de distribuciones Windows y Linux</a>
           </div>
@@ -53,6 +69,7 @@
           <button class="go-post" value="1">Visitar post</button>
         </div>
       </div>
+
     </div>
   </div>
   <div id="sub-main"></div>
